; ModuleID = '/home/carl/AnghaBench/micropython/py/extr_obj.c_mp_obj_get_array_fixed_n.c'
source_filename = "/home/carl/AnghaBench/micropython/py/extr_obj.c_mp_obj_get_array_fixed_n.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MICROPY_ERROR_REPORTING = common dso_local global i64 0, align 8
@MICROPY_ERROR_REPORTING_TERSE = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [28 x i8] c"tuple/list has wrong length\00", align 1
@mp_type_ValueError = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [45 x i8] c"requested length %d but object has length %d\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mp_obj_get_array_fixed_n(i32 %0, i64 %1, i32** %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  %6 = alloca i32**, align 8
  %7 = alloca i64, align 8
  store i32 %0, i32* %4, align 4
  store i64 %1, i64* %5, align 8
  store i32** %2, i32*** %6, align 8
  %8 = load i32, i32* %4, align 4
  %9 = load i32**, i32*** %6, align 8
  %10 = call i32 @mp_obj_get_array(i32 %8, i64* %7, i32** %9)
  %11 = load i64, i64* %7, align 8
  %12 = load i64, i64* %5, align 8
  %13 = icmp ne i64 %11, %12
  br i1 %13, label %14, label %28

14:                                               ; preds = %3
  %15 = load i64, i64* @MICROPY_ERROR_REPORTING, align 8
  %16 = load i64, i64* @MICROPY_ERROR_REPORTING_TERSE, align 8
  %17 = icmp eq i64 %15, %16
  br i1 %17, label %18, label %20

18:                                               ; preds = %14
  %19 = call i32 @mp_raise_ValueError(i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str, i64 0, i64 0))
  br label %27

20:                                               ; preds = %14
  %21 = load i64, i64* %5, align 8
  %22 = trunc i64 %21 to i32
  %23 = load i64, i64* %7, align 8
  %24 = trunc i64 %23 to i32
  %25 = call i32 @mp_obj_new_exception_msg_varg(i32* @mp_type_ValueError, i8* getelementptr inbounds ([45 x i8], [45 x i8]* @.str.1, i64 0, i64 0), i32 %22, i32 %24)
  %26 = call i32 @nlr_raise(i32 %25)
  br label %27

27:                                               ; preds = %20, %18
  br label %28

28:                                               ; preds = %27, %3
  ret void
}

declare dso_local i32 @mp_obj_get_array(i32, i64*, i32**) #1

declare dso_local i32 @mp_raise_ValueError(i8*) #1

declare dso_local i32 @nlr_raise(i32) #1

declare dso_local i32 @mp_obj_new_exception_msg_varg(i32*, i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
